--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
         </div>
     </nav>
 
+    <!--Primera sección-->
+    <header class="bg_hero text-center">
+        <div class="mujer">
+            <img src="assets/img/bg_hero.png" class="img-fluid" alt="">
+        </div>
+        
+        <div class="titulos text-center">
+            <h1 class="titulo1" >YO SOY</h1>
+            <hr >
+            <h1 class="titulo2 text-bold">MAGDALENA</h1>
+        </div>
+    </header>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
