--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis ante nulla. Donec in neque consectetur, ultrices justo eu, hendrerit lectus.
             </h4>
             <hr class="linea">
-        </div>como?
+        </div>
         
         <div class="container">
             <div class="row">
@@ -85,6 +85,22 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!--Tercera sección-->
+    <section class="container py-5" id="experience">
+        <h1 class="miexperiencia">MI EXPERIENCIA</h1>
+        <hr class="linea">
+        <div class="icons">
+            <div class="row">
+                <div class="col-md-6">
+                    <i class="fab fa-empire fa-7x"><h5 class="name">Stormtrooper</h5><h5 class="date">1980 - 2014</h5></i>
+                </div>
+                <div class="col-md-6">
+                    <i class="fab fa-medium-m fa-7x"><h5 class="name">Desarrolladora Rails</h5><h5 class="date">2014 - 2018</h5></i>
+                </div>
+            </div>  
         </div>
     </section>
 
