--- a/index.html
+++ b/index.html
@@ -149,9 +149,25 @@
     <!--Quinta sección-->
     <section class="container my-5" id="send">
         <h1 class="text-center my-4 contact">Contacto<hr class="linea"></h1>
-        
         <div class="typeform-widget" data-url="https://form.typeform.com/to/GFb4SAs5?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
     </section>
+
+    <!--Sexta sección-->
+    <footer class="bg-footer container-fluid py-5">
+        <div class="container text-center">
+            <div class="row ">
+                <div class="col-md-6">
+                    <h3 class="magdalena">MAGDALENA</h3>
+                </div>
+                <div class="col-md-6 iconos">
+                    <i class="fab fa-github-square fa-3x fa-fw" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="GitHub"></i>
+                    <i class="fab fa-linkedin fa-3x fa-fw" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Linkedin"></i>
+                    <i class="fab fa-twitter-square fa-3x fa-fw" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Twitter"></i>
+                    <i class="fab fa-facebook-square fa-3x fa-fw" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Facebook"></i>
+                </div>
+            </div>
+        </div> 
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
