se agregan algunos link en seccion de mis ultimos trabajos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-navbar ">
-        <div class="container">
+        <div class="container mx-4 content">
             <a class="navbar-brand text-light m" href="#">M</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
     <!--Primera sección-->
     <header class="bg_hero text-center">
         <div class="mujer">
-            <img src="assets/img/bg_hero.png" class="img-fluid" alt="">
+            <img src="assets/img/bg_hero.png" class="img-fluid" alt="foto principal mujer sonriendo">
         </div>
         
         <div class="titulos text-center">
@@ -112,34 +112,34 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/img/meet_coffee.png" alt="Card image cap">
+                        <a href="http://meetycoffee.tk/"><img class="card-img-top" src="assets/img/meet_coffee.png" alt="proyecto meet and coffe"></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <img class="card-img-top" src="assets/img/iguana_page.png" alt="Card image cap">
+                        <img class="card-img-top" src="assets/img/iguana_page.png" alt="proyecto iguanas">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <img class="card-img-top" src="assets/img/suricata.png" alt="Card image cap">
+                        <a href="http://desafiosuricata.tk/"><img class="card-img-top" src="assets/img/suricata.png" alt="proyecto suricata"></a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card" >
-                        <img class="card-img-top" src="assets/img/cuppon.png" alt="Card image cap">
+                        <img class="card-img-top" src="assets/img/cuppon.png" alt="proyecto cuppon">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <img class="card-img-top" src="assets/img/ricomida.png" alt="Card image cap">
+                        <a href="http://desafioricomida.tk/"><img class="card-img-top" src="assets/img/ricomida.png" alt="proyecto ricomida"></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <img class="card-img-top" src="assets/img/dmark.png" alt="Card image cap">
+                        <img class="card-img-top" src="assets/img/dmark.png" alt="proyecto propio">
                     </div>
                 </div>
             </div>
