se modifican paginas externas

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <a href="http://meetycoffee.tk/"><img class="card-img-top" src="assets/img/meet_coffee.png" alt="proyecto meet and coffe"></a>
+                        <a href="https://pedropabloyanez.github.io/meet-coffee/" target="_blank"><img class="card-img-top" src="assets/img/meet_coffee.png" alt="proyecto meet and coffe"></a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <a href="http://desafiosuricata.tk/"><img class="card-img-top" src="assets/img/suricata.png" alt="proyecto suricata"></a>
+                        <a href="https://pedropabloyanez.github.io/Desafio-Suricata/" target="_blank"><img class="card-img-top" src="assets/img/suricata.png" alt="proyecto suricata"></a>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <a href="http://desafioricomida.tk/"><img class="card-img-top" src="assets/img/ricomida.png" alt="proyecto ricomida"></a>
+                        <a href="http://desafioricomida.tk/" target="_blank"><img class="card-img-top" src="assets/img/ricomida.png" alt="proyecto ricomida"></a>
                     </div>
                 </div>
                 <div class="col-md-4">
