changes iguana pages

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card" >
-                            <img class="card-img-top" src="assets/img/iguana_page.png" alt="proyecto iguanas">
+                            <a href="https://pedropabloyanez.github.io/desafio-Iguana_Page/" target="_blank"><img class="card-img-top" src="assets/img/iguana_page.png" alt="proyecto iguanas"></a>
                             <div class="card-body">
-                                <a href="https://pedropabloyanez.github.io/desafio-Iguana_Page/" target="_blank"></a><h5 class="card-title">Iguana Page</h5>
+                                <h5 class="card-title">Iguana Page</h5>
                                 <p class="card-text">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,</p>
                             </div>
                         </div>
